Промяна на оформление на документа и оправяне на лиценза спрямо автоматично създадения от GitHub лиценз.

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -67,7 +67,7 @@
         </nav>
     </div>
     <footer>
-        <p>&copy; 2023 M4 Rifle Information. Contact: info@m4rifle.com</p>
+        <p>&copy; Copyright (c) 2025 Teodor Ivanov | Contact: 123-456-7890</p>
     </footer>
     <script src="../js/scripts.js"></script>
 </body>
