--- a/src/pages/gallery.html
+++ b/src/pages/gallery.html
@@ -49,7 +49,7 @@
         </nav>
     </main>
     <footer>
-        <p>&copy; 2023 M4 Rifle Website | Contact: info@m4rifle.com</p>
+        <p>&copy; Copyright (c) 2025 Teodor Ivanov | Contact: 123-456-7890</p>
     </footer>
     <script src="../js/scripts.js"></script>
 </body>
