--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
     <footer>
-        <p>&copy; 2023 M4 Rifle Website | Contact: 123-456-7890</p>
+        <p>&copy; Copyright (c) 2025 Teodor Ivanov | Contact: 123-456-7890</p>
     </footer>
     <script src="../js/scripts.js"></script>
 </body>
