Нови страници и промени в документацията.

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -60,9 +60,9 @@
         <nav class="right-nav">
             <h3>Related Links</h3>
             <ul>
-                <li><a href="#">M4 Variants</a></li>
-                <li><a href="#">M4 Accessories</a></li>
-                <li><a href="#">M4 in Action</a></li>
+                <li><a href="variants.html">M4 Variants</a></li>
+                <li><a href="accessories.html">M4 Accessories</a></li>
+                <li><a href="video.html">M4 in Action</a></li>
             </ul>
         </nav>
     </div>
