--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>M4 Rifle Website</h1>
+        <h1>M4 Rifle - Contacts</h1>
     </header>
     <div class="container">
         <nav class="left-nav">
@@ -37,9 +37,9 @@
         <nav class="right-nav">
             <h3>Additional Links</h3>
             <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Feedback</a></li>
+                <li><a href="variants.html">M4 Variants</a></li>
+                <li><a href="accessories.html">M4 Accessories</a></li>
+                <li><a href="video.html">M4 in Action</a></li>
             </ul>
         </nav>
     </div>
