--- a/src/pages/gallery.html
+++ b/src/pages/gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>M4 Rifle Photo Gallery</h1>
+        <h1>M4 Rifle - Photo Gallery</h1>
     </header>
     <main>
         <nav class="left-nav">
@@ -22,29 +22,30 @@
         <div class="photo-gallery">
             <figure>
                 <a href="../images/image1.jpg" target="_blank">
-                    <img src="../images/image1.jpg" alt="M4 Rifle Image 1">
+                    <img src="../images/image1.jpg" 
+                        alt="One of the first M4 Rifles with military equipment">
                 </a>
-                <figcaption>M4 Rifle - Image 1</figcaption>
+                <figcaption>One of the first M4 Rifles with military equipment</figcaption>
             </figure>
             <figure>
                 <a href="../images/image2.jpg" target="_blank">
-                    <img src="../images/image2.jpg" alt="M4 Rifle Image 2">
+                    <img src="../images/image2.jpg" alt="Modern M4 Rifle">
                 </a>
-                <figcaption>M4 Rifle - Image 2</figcaption>
+                <figcaption>Modern M4 Rifle</figcaption>
             </figure>
             <figure>
                 <a href="../images/image3.jpg" target="_blank">
-                    <img src="../images/image3.jpg" alt="M4 Rifle Image 3">
+                    <img src="../images/image3.jpg" alt="M4 Rifle parts">
                 </a>
-                <figcaption>M4 Rifle - Image 3</figcaption>
+                <figcaption>M4 Rifle parts</figcaption>
             </figure>
         </div>
         <nav class="right-nav">
             <h2>Quick Links</h2>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Specifications</a></li>
-                <li><a href="contact.html">Get in Touch</a></li>
+                <li><a href="variants.html">M4 Variants</a></li>
+                <li><a href="accessories.html">M4 Accessories</a></li>
+                <li><a href="video.html">M4 in Action</a></li>
             </ul>
         </nav>
     </main>
