Промяна на съдържание и промяна на използваните източници.

--- a/src/pages/variants.html
+++ b/src/pages/variants.html
@@ -23,16 +23,8 @@
         <main>
         <h2>Variants of the M4 Rifle</h2>
         <section>
-            <h3>M4A1</h3>
-            <p>The M4A1 is a fully automatic variant of the basic M4 carbine intended for special operations use. It has a heavier barrel to withstand the heat generated during sustained fire.</p>
-        </section>
-        <section>
-            <h3>M4 MWS</h3>
-            <p>The M4 Modular Weapon System (MWS) is a variant that allows for the attachment of various accessories such as optics, grenade launchers, and laser sights, making it highly versatile for different combat scenarios.</p>
-        </section>
-        <section>
-            <h3>M4 Commando</h3>
-            <p>The M4 Commando is a shorter version of the M4 carbine, designed for close-quarters combat. It features a shorter barrel and collapsible stock for improved maneuverability.</p>
+            <h3>M16A2</h3>
+            <p>A shortened variant of the M16A2 rifle, the M4 carbine provides the individual soldier operating in close quarters the capability to engage targets at extended range with accurate, lethal fire. The M4-series Carbine achieves over 80% commonality with the M16A2 Rifle and replaces all M3 .45 caliber submachine guns, and selected M9 pistols and M16 rifles.</p>
         </section>
         </main>
         <nav class="right-nav">
